<resources>
    <string name="app_name">KnightShift</string>
    <string name="knightshift">KnightShift</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="blackKnight">TODO</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="knight_shift">Knight Shift</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="pgn_file_name">PGN File Name</string>
    <string name="a1">a1</string>
    <string name="a2">a2</string>
    <string name="a3">a3</string>
    <string name="a4">a4</string>
    <string name="a5">a5</string>
    <string name="a6">a6</string>
    <string name="a7">a7</string>
    <string name="a8">a8</string>
    <string name="b1">b1</string>
    <string name="b2">b2</string>
    <string name="b3">b3</string>
    <string name="b6">b6</string>
    <string name="b4">b4</string>
    <string name="b5">b5</string>
    <string name="b7">b7</string>
    <string name="b8">b8</string>
    <string name="c1">c1</string>
    <string name="c2">c2</string>
    <string name="c3">c3</string>
    <string name="c4">c4</string>
    <string name="c5">c5</string>
    <string name="c6">c6</string>
    <string name="c7">c7</string>
    <string name="c8">c8</string>
    <string name="d1">d1</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d5">d5</string>
    <string name="d6">d6</string>
    <string name="d7">d7</string>
    <string name="d8">d8</string>
    <string name="e1">e1</string>
    <string name="e2">e2</string>
    <string name="e3">e3</string>
    <string name="e4">e4</string>
    <string name="e5">e5</string>
    <string name="e6">e6</string>
    <string name="e7">e7</string>
    <string name="e8">e8</string>
    <string name="f1">f1</string>
    <string name="f2">f2</string>
    <string name="f3">f3</string>
    <string name="f4">f4</string>
    <string name="f5">f5</string>
    <string name="f6">f6</string>
    <string name="f7">f7</string>
    <string name="f8">f8</string>
    <string name="g1">g1</string>
    <string name="g2">g2</string>
    <string name="g3">g3</string>
    <string name="g4">g4</string>
    <string name="g5">g5</string>
    <string name="g6">g6</string>
    <string name="g7">g7</string>
    <string name="g8">g8</string>
    <string name="h1">h1</string>
    <string name="h2">h2</string>
    <string name="h3">h3</string>
    <string name="h4">h4</string>
    <string name="h5">h5</string>
    <string name="h6">h6</string>
    <string name="h7">h7</string>
    <string name="h8">h8</string>
    <string name="move">Move</string>
    <string name="reset">Reset</string>
</resources>