<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintDimensionRatio="W,1:8"
        app:layout_constraintStart_toStartOf="@+id/start_texts"
        app:layout_constraintTop_toTopOf="@+id/topPassword"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/loginBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/knight_shift"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/topKnightShiftText"
        app:layout_constraintDimensionRatio="W,1:3"
        app:layout_constraintStart_toStartOf="@+id/startKnightShiftText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/loginEmailEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintDimensionRatio="W,1:8"
        app:layout_constraintStart_toStartOf="@+id/start_texts"
        app:layout_constraintTop_toTopOf="@+id/topEmail"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        app:layout_constraintDimensionRatio="W,1:8"
        app:layout_constraintStart_toStartOf="@+id/start_texts"
        app:layout_constraintTop_toTopOf="@+id/topLoginButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/topLoginText"
        app:layout_constraintDimensionRatio="W,1:3"
        app:layout_constraintStart_toStartOf="@+id/startLoginText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/loginResetView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/topRegister"
        app:layout_constraintDimensionRatio="W,1:2"
        app:layout_constraintStart_toStartOf="@+id/start_texts"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/loginRegisterView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/register"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/topRegister"
        app:layout_constraintDimensionRatio="W,1:2"
        app:layout_constraintEnd_toEndOf="@+id/end_texts"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startKnightShiftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topKnightShiftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>