<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:onClick="goToOption1"
            android:text="@string/option_1"
            app:layout_constraintDimensionRatio="W,1:3"
            app:layout_constraintStart_toStartOf="@+id/startButtons"
            app:layout_constraintTop_toTopOf="@+id/topBoard"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:autoSizeTextType="uniform"
            android:onClick="goToOption2"
            android:text="@string/option_2"
            app:layout_constraintDimensionRatio="W,1:3"
            app:layout_constraintStart_toStartOf="@+id/startButtons"
            app:layout_constraintTop_toTopOf="@+id/bottomTextView"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:onClick="goToOption3"
            android:text="@string/option_3"
            app:layout_constraintDimensionRatio="W,1:3"
            app:layout_constraintStart_toStartOf="@+id/startButtons"
            app:layout_constraintTop_toTopOf="@+id/topOption3"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>